# Ludens-Flow

./: .env.example  .gitignore  LICENSE  README.md  README.zh.md  STATUS.md  err3.txt  error_trace.txt  requirements.txt  verify_tools.py
11_docs/: BENCHMARK.md  (+13 more)
agent_workbench/: README.md  api.py  patch_git_graph.py  patch_git_graph_dark.py  pyproject.toml  run_agents.py  run_baseline.py
agent_workbench/docs/: roadmap.md
agent_workbench/frontend/: api.js  app.js  index.html  styles.css
agent_workbench/llm/: __init__.py  provider.py
agent_workbench/prompts/: design_agent.md  engineering_agent.md  pm_agent.md  review_agent.md
agent_workbench/scripts/: happy_path_manual.py  smoke_install.py  start_web.ps1
agent_workbench/src/: __init__.py
agent_workbench/tests/: debug_mcp_check.py  debug_test.py  dump_err.py  run_with_traceback.py  test_api_project_lifecycle.py  test_artifacts.py  test_copywriting_capability.py  test_engineering_agent.py  test_freeze.py  test_github_readonly.py  test_graph_engine.py  test_happy_path.py  test_model_routing.py  test_multi_project_workspace.py  test_project_lifecycle.py  test_regressions.py  test_router.py  test_router_options.py  test_router_v2.py  test_state_store.py  test_step3_acceptance.py  test_step4_acceptance.py  test_step5_graph_engine.py  test_tools.py  test_unity_mcp.py  test_unity_tools.py  test_unreal_mcp_adapter.py  test_user_profile.py  test_workflow_stability.py  test_workspace_reset.py  test_workspace_tools.py
agent_workbench/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+231 files in other folders)
